# opengl

./: CMakeLists.txt  main.cpp  main.h  opengl_intro.cpp  opengl_intro.h
funcs/: CMakeLists.txt  fragShader.glsl  shader.cpp  vertShader.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/3D/: fragShader.glsl  vertShader.glsl
shaders/box/: fragShader.glsl  vertShader.glsl
shaders/light/: fragShader.glsl  lightShader.glsl  vertShader.glsl
shaders/matrix/: fragShader.glsl  vertShader.glsl
shaders/texture/: fragShader.glsl  vertShader.glsl
